# handler/response.go
@@ -37,3 +37,9 @@ type CreateOpeningResponse struct {
 	Message string `json:"message"`
 	Date schemas.OpeningResponse `json:"data"`
 }
+
+type DeleteOpeningResponse struct {
+	Status string `json:"status"`
+	Message string `json:"message"`
+	Date schemas.OpeningResponse `json:"data"`
+}
